fixed apple position, fixed snake cross screen, added rat entity (#3)
* fixed compilation problems, fixed gameover position

* added rat, fixed apple positioning, fixed snake cross board